[package]
name = "lua-rs"
version = "0.1.0"
authors = ["jice <jice.nospam@gmail.com>"]
edition = "2021"

[dependencies]

[features]
debug_logs = []

[dev-dependencies]
criterion="*"
rlua={version="*",default-features = false, features=["builtin-lua51"]}

[profile.bench]
debug = false
debug-assertions = false

[[bench]]
name = "main"
harness = false
