[package]
name = "lua-wasm"
version = "0.1.0"
authors = ["jice <jice.nospam@gmail.com>"]
edition = "2021"
description = "Lua reimplementation in pure, safe Rust"
repository = "https://github.com/jice-nospam/lua-rs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
lua-rs = { path = ".." }
wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
# disassemble code on stdout/js console during execution
debug_logs = ["lua-rs/debug_logs"]
